# serializer version: 1
# name: test_device_configuration_mode_calls[reboot]
  None
# ---
# name: test_get_current_setting
  dict({
    'firmware_version': 'V1.0.12.216_10.2.122',
    'https_port': 5555,
    'login_method': 2,
    'model': 'R7000',
  })
# ---
# name: test_get_data[get_attached_devices]
  list([
    dict({
      'blocked': False,
      'connection_type': <ConnectionType.WIRELESS: 'wireless'>,
      'hostname': 'motorola-edge-50-fusion',
      'ip_address': '192.168.0.2',
      'link_speed': 192,
      'mac_address': 'D6:2E:BD:9B:0A:63',
      'signal_strength': 100,
    }),
    dict({
      'blocked': None,
      'connection_type': None,
      'hostname': 'motorola-edge-50-fusion',
      'ip_address': '192.168.0.2',
      'link_speed': None,
      'mac_address': 'D6:2E:BD:9B:0A:63',
      'signal_strength': None,
    }),
    dict({
      'blocked': None,
      'connection_type': <ConnectionType.WIRELESS: 'wireless'>,
      'hostname': 'motorola-edge-50-fusion',
      'ip_address': '192.168.0.2',
      'link_speed': 192,
      'mac_address': 'D6:2E:BD:9B:0A:63',
      'signal_strength': 100,
    }),
  ])
# ---
# name: test_get_data[get_device_info]
  dict({
    'device_mode': <DeviceMode.ROUTER: 0>,
    'device_name': 'Milky way',
    'firewall_version': 'ACOS NAT-Netfilter v5',
    'firmware_version': 'V1.0.12.216',
    'hardware_version': 'R7000',
    'model': 'R7000',
    'other_hardware_version': None,
    'other_software_version': '10.2.122',
    'serial_number': '44596C7W70A47',
    'smart_agent_version': '3.0',
    'vpn_version': None,
  })
# ---
# name: test_get_data[get_ethernet_link_status]
  'Up'
# ---
# name: test_get_data[get_system_info]
  dict({
    'cpu_usage': 27,
    'memory_usage': 59,
  })
# ---
# name: test_get_data[get_traffic_meter_statistics]
  dict({
    'average_download_last_month': 0.0,
    'average_download_month': 0.0,
    'average_download_week': 0.0,
    'average_upload_last_month': 0.0,
    'average_upload_month': 0.0,
    'average_upload_week': 0.0,
    'connection_time_last_month': 0,
    'connection_time_month': 0,
    'connection_time_today': 0,
    'connection_time_week': 0,
    'connection_time_yesterday': 0,
    'download_today': 0.0,
    'download_yesterday': 0.0,
    'total_download_last_month': 0.0,
    'total_download_month': 0.0,
    'total_download_week': 0.0,
    'total_upload_last_month': 0.0,
    'total_upload_month': 0.0,
    'total_upload_week': 0.0,
    'upload_today': 0.0,
    'upload_yesterday': 0.0,
  })
# ---
# name: test_get_data[get_traffic_meter_statistics_2]
  dict({
    'average_download_last_month': 0.0,
    'average_download_month': 6.76,
    'average_download_week': 29.94,
    'average_upload_last_month': 0.0,
    'average_upload_month': 0.2,
    'average_upload_week': 0.88,
    'connection_time_last_month': 0,
    'connection_time_month': 14,
    'connection_time_today': 14,
    'connection_time_week': 14,
    'connection_time_yesterday': 0,
    'download_today': 209.58,
    'download_yesterday': 0.0,
    'total_download_last_month': 0.0,
    'total_download_month': 209.58,
    'total_download_week': 209.58,
    'total_upload_last_month': 0.0,
    'total_upload_month': 6.19,
    'total_upload_week': 6.19,
    'upload_today': 6.19,
    'upload_yesterday': 0.0,
  })
# ---
# name: test_get_data[is_5g_guest_access_enabled]
  False
# ---
# name: test_get_data[is_block_device_enabled]
  False
# ---
# name: test_get_data[is_guest_access_enabled]
  False
# ---
# name: test_get_data[is_qos_enabled]
  False
# ---
# name: test_get_data[is_smart_connect_enabled]
  False
# ---
# name: test_get_data[is_traffic_meter_enabled]
  False
# ---
